--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name    = "atlantix_eda" # the name of the package
 version = "0.1.1"    # the current version, obeying semver
+edition = "2021"     # use 2021 edition (2024 edition is not yet stable)
 authors = ["James <fpga@atlantixeng.com>"]
 description = "Programmatically generated libraries for PCB Design."
 repository = "https://github.com/saturn77/atlantix-eda.git"
@@ -10,6 +11,7 @@ num-traits = "0.2.14"
 fs_extra = "1.2.0"
 chrono = "0.4"
 clap = { version = "4.0", features = ["derive"] }
+bevy_ecs = "0.14"
 
 
 [lib]
